# meta-hhctrl

./: .gitignore  .gitmodules  README  out
module-dev/: CMakeLists.txt  src
module-dev/inc/: engine.h  hatch2sr.h  relay.h  sensor.h
module-dev/inc/linux/: gpio.h  interrupt.h  pwm.h
module-dev/mock/: gmock_engine.hpp  gmock_gpio.hpp  gmock_interrupt.hpp  gmock_pwm.hpp  gmock_relay.hpp  gmock_sensor.hpp  mock_api.hpp
module-dev/src/: engine.c  hatch2sr.c  relay.c  sensor.c
module-dev/stub/: engine.cpp  gpio.cpp  interrupt.cpp  pwm.cpp  relay.cpp  sensor.cpp
module-dev/test/: engine_test.cpp  hatch2sr_general_test.cpp  hatch2sr_test.cpp  hatch2sr_test_base.hpp  hatch2sr_test_for_close.cpp  hatch2sr_test_for_open.cpp  relay_test.cpp  sensor_test.cpp
sources/meta-bsp_embedos/: README
sources/meta-bsp_embedos/conf/: layer.conf
sources/meta-bsp_embedos/conf/machine/: hhctrl.conf
sources/meta-bsp_embedos/recipes-core/images/: hhctrl-image-dev.bb
sources/meta-bsp_embedos/recipes-kernel/hatch2sr-mod/: hatch2sr-mod_0.1.bb
sources/meta-bsp_embedos/recipes-kernel/hatch2sr-mod/files/: Makefile  engine.c  engine.h  hatch2sr.c  hatch2sr.h  hatch2sr_b.c  hatch2sr_base.c  hatch2sr_ctrl.c  hatch2sr_ctrl.h  hatch2sr_driver.c  relay.c  relay.h  sensor.c  sensor.h
sources/meta-bsp_embedos/recipes-kernel/linux/: linux-raspberrypi_5.10.bbappend
sources/meta-bsp_embedos/recipes-kernel/linux/files/: 0001-Added-device-tree-overlay-for-hatch2sr.patch  patch-with-overrides  patch-without-overrides
sources/meta-sheli/conf/: layer.conf
sources/meta-sheli/conf/distro/: sheli-integration.conf  sheli.conf
sources/meta-sheli/conf/distro/include/: common.conf
sources/meta-sheli/recipes-connectivity/wpa-supplicant/: wpa-supplicant_%.bbappend
sources/meta-sheli/recipes-connectivity/wpa-supplicant/files/: wifi-dev.conf  wifi-integration.conf
sources/meta-sheli/recipes-core/busybox/: busybox_%.bbappend
sources/meta-sheli/recipes-core/busybox/files/: fragment.cfg
sources/meta-sheli/recipes-examples/my-service/files/: skeleton_test.c
sources/meta-shmpc-bsp/recipes-kernel/hatch2sr-mod/files/: .Module.symvers.cmd  .engine.o.cmd  .hatch2sr.ko.cmd  .hatch2sr.mod.cmd  .hatch2sr.mod.o.cmd  .hatch2sr.o.cmd  .hatch2sr_ctrl.o.cmd  .hatch2sr_driver.o.cmd  .modules.order.cmd  .relay.o.cmd  .sensor.o.cmd  hatch2sr.ko  hatch2sr.mod  hatch2sr.mod.c  hatch2sr_ctrl.c  modules.order
sources/meta-shmpc-os/: README
sources/meta-shmpc-os/conf/: layer.conf
sources/meta-shmpc-os/conf/distro/: cygnos-dev.conf  sheli-dev.conf
